fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,7 @@ html {
   scroll-behavior: smooth;
   width: 100%;
   height: 100%;
-  margin:0;
+
+
+
 }
